--- a/package.json
+++ b/package.json
@@ -77,34 +77,44 @@
     }
   ],
   "dependencies": {
-    "@clerk/nextjs": "^4.31.5",
+    "@clerk/nextjs": "^4.31.6",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.21.1",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "axios": "^1.6.5",
+    "add": "^2.0.6",
+    "avatar": "^0.1.0",
+    "axios": "^1.7.7",
+    "badge": "^1.0.3",
+    "button": "^1.1.1",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "crisp-sdk-web": "^1.0.21",
+    "crisp-sdk-web": "^1.0.25",
+    "dialog": "^0.3.1",
     "lucide-react": "^0.309.0",
     "next": "14.1.1",
     "openai": "^3.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
+    "progress": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.25.2",
+    "select": "^1.1.2",
+    "shadcn-ui": "^0.9.2",
     "sonner": "^1.3.1",
     "stripe": "^14.12.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -114,8 +124,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.8.0",
-    "tailwindcss": "^3.3.0",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
